# async-log-cpp

./: AsyncLog.cpp  AsyncLog.h  CMakeLists.txt  README.md
test/: CMakeLists.txt  test.cpp
